--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -5,7 +5,7 @@
 body {
 	// background-image: url(../img/bg2.png);
 	// background-repeat: repeat repeat;
-	background-color: rgba(222,222,222,0.2);
+	background-color: rgba(222,222,222,0.3);
 }
 
 /* 
@@ -20,8 +20,8 @@ body {
 	.logo-link {
 		float: none;
 		display: block;
-		text-align: left;
-		font-size: 2.618em;
+		text-align: center;
+		font-size: 1.618em;
 		font-family: $font-heading;
 		font-weight: 700;
 		letter-spacing: -1px;
@@ -34,7 +34,6 @@ body {
 
 		@include MQ(S) {
 			float: left;
-			font-size: 1.618em;
 		}
 	}
 }
